--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,12 @@
 name: Bulid My Application
 on: push
+
 jobs:
- build:
-    name:Build our App
-    runs-on:ubuntu-latest 
+   build:
+    name: Build our App
+    runs-on: ubuntu-latest
     steps:
-    
-   - name: Print Current Directory
-     run:pwd 
-   - name: List Files in Directory
-     run:ls
+      - name: Print Current Directory
+         run:pwd
+      - name: List files in Directory
+        run:ls
