--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,10 @@ jobs:
     name: Build our App
     runs-on: ubuntu-latest
     steps:
+       - name: Pull Code
+         uses: actions/checkout@v3
        - name: Print Current Directory
          run: pwd
        - name: List Files in Directory
          run: ls
+
