--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,4 +12,8 @@ jobs:
          run: pwd
        - name: List Files in Directory
          run: ls
+       - name: Check Dotnet Cli
+         run: dotnet
+       - name: Check NPM Cli
+         run: npm
 
