--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,9 @@ jobs:
        - name: List Files in Directory
          run: ls
        - name: Check Dotnet Cli
-         run: dotnet
+         run: dotnet build
+       - name: Check Dotnet Cli
+         run: ls TrickingLibrary.Api/ -R
        - name: Check NPM Cli
-         run: npm
+         run: npm -v
 
